--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
 <head>
-  <title>Title of the document</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+
+  <title>Title</title>
+  <meta name="description" content="Description here">
+  <meta name="author" content="SitePoint">
+  
+  <p>This is where it all begins</p>
+
+  <link rel="stylesheet" href="css/style.css?v=1.0">
+
 </head>
+
 <body>
 
-  <script src="js/scripts.js"></script>
 
+
+  
+
+
+
+  <script src="js/scripts.js"></script>
 </body>
 </html>
