--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!doctype html>
-
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>Title</title>
-  <meta name="description" content="Description here">
-  <meta name="author" content="SitePoint">
-  
-  <p>This is where it all begins</p>
-
-  <link rel="stylesheet" href="css/style.css?v=1.0">
-
+<meta charset="utf-8">
+<title>Homepage</title>
+<meta name="description" content="Description here">
+<meta name="author" content="SitePoint">
+<link rel="stylesheet" href="css/style.css?v=1.0">
 </head>
-
 <body>
 
+<div class="hero panel">
+  <div class="hero__content container">
+    <p>Homepage under construction</p>
+    <a class="button" href="/pillar.html">Pillar page</a>
+    <a class="button" href="/post.html">Post page</a>
+  </div>
+</div>
 
-
-  
-
-
-
-  <script src="js/scripts.js"></script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
