--- a/pillar.html
+++ b/pillar.html
@@ -82,12 +82,12 @@
       </ul>
       </div>
     </div>
-    <div class="page-nav__backtop" role="button">
+    <a href="#" class="page-nav__backtop" role="button">
         Back to top
         <svg class="page-nav__backtop__icon">
           <use xlink:href="assets/svg/icons.svg#icon-arrow-down--thick" />
         </svg>
-    </div>
+    </a>
   </div>
 </div>
 
