--- a/pillar.html
+++ b/pillar.html
@@ -44,10 +44,10 @@
     </div>
     <div class="mobile-menu__group">
       <a href="#" class="mobile-menu__item">
-        <span href="#">How to become a writer</span>
+        <span href="#">Blog</span>
       </a>
       <a href="#" class="mobile-menu__item current">
-        <span href="#">How to become a web designer</span>
+        <span href="#">About us</span>
       </a>
     </div>
   </div>
@@ -64,12 +64,12 @@
 <div class="page-nav hidden">
   <div class="container page-nav__inner">
     <div class="page-nav__dropdown__outer page-nav-trigger" role="button">
-      <a href="#" role="button" class="page-nav__button">
+      <div role="button" class="page-nav__button">
         On this page
         <svg class="page-nav__button__icon">
           <use xlink:href="assets/svg/icons.svg#icon-arrow-down--thick" />
         </svg>
-      </a>
+      </div>
       <div class="page-nav__dropdown hidden">
       <ul class="contents-image__contents__list">
         <li><a href="#what-is-web-design">What is web design</a></li>
@@ -238,9 +238,6 @@
     </div>
   </div>
 </footer>
-
-
-
-<script src="js/scripts.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
